# cx-switch

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh
scripts/: deploy.sh
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: list.rs  watch.rs
src/core/: registry.rs
src/tui/: dashboard.rs  mod.rs  web.rs
